ALBERT and Transformer-XL

--- a/research/2019_BART.md
+++ b/research/2019_BART.md
@@ -1,4 +1,5 @@
 ---
+- Title : BART Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension
 - Auhtor: [[Mike Lewis]] [[Luke Zettlemoyer]] [[Omer Levy]]
 - Topics: [[nlp_transformers]] [[#ann_architecture]] [[nlp_lm]]
 - Venue: #arXiv
@@ -6,7 +7,7 @@
 ---
 ### Techniques
 - Denoising [[auto-encoder]] that maps a corrupted text to the original one it was derived from
--
+- 
 ---
 ### Goal
 - Combine [[bi-directional]] ([[BERT]]) and [[auto-regressive]] ([[GPT]]) [[Transformers]]
@@ -28,7 +29,7 @@
 ![[2019_BART_schematics.png]]
 - Available through #hugging-face
 - +10% parameters in comparision to [[BERT]]
-- Noise tranformations from [[BART]]: 
+- Noise tranformations from [[2019_BART]]: 
 	- #token-masking : same as [[BERT]]
 	- #token-deletion : randon tokens deleted
 	- #sentence-permutation: shuffles sentences
