--- a/research/_2019_BART.md
+++ b/research/_2019_BART.md
@@ -1,6 +1,8 @@
+### BART Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension
 ---
-- Title : BART Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension
-- Auhtor: [[Mike Lewis]] [[Luke Zettlemoyer]] [[Omer Levy]]
+- [Zotero Select Link](zotero://select/groups/2480461/items/MQD3MHPY)
+- [Zotero URI](https://www.zotero.org/groups/2480461/items/MQD3MHPY)
+- Author: [[Mike Lewis]] [[Luke Zettlemoyer]] [[Omer Levy]]
 - Topics: [[nlp_transformers]] [[#ann_architecture]] [[nlp_lm]]
 - Venue: #arXiv
 - Year: #2019
@@ -29,7 +31,7 @@
 ![[2019_BART_schematics.png]]
 - Available through #hugging-face
 - +10% parameters in comparision to [[BERT]]
-- Noise tranformations from [[2019_BART]]: 
+- Noise tranformations from [[_2019_BART]]: 
 	- #token-masking : same as [[BERT]]
 	- #token-deletion : randon tokens deleted
 	- #sentence-permutation: shuffles sentences
