--- a/research/_2019_BART.md
+++ b/research/_2019_BART.md
@@ -11,7 +11,7 @@
 - Denoising [[auto-encoder]] that maps a corrupted text to the original one it was derived from
 ---
 ### Goal
-- Combine [[bi-directional]] ([[BERT]]) and [[auto-regressive]] ([[GPT]]) [[Transformers]]
+- Combine [[bi-directional]] ([[_2018_BERT]]) and [[auto-regressive]] ([[GPT]]) [[Transformers]]
 ---
 ### Major Contributions
 - They corrupt the input text with a noisy functions and try to reconstruct the original text using a [[Seq2Seq]] model
@@ -29,9 +29,9 @@
 - The input text is encoded in a [[Seq2Seq]] model with a  [[bi-directional]] [[encoder]] over corrupted text and a left-to-rigth  [[auto-regressive]] [[decoder]]
 ![[2019_BART_schematics.png]]
 - Available through #hugging-face
-- +10% parameters in comparision to [[BERT]]
+- +10% parameters in comparision to [[_2019_BERT]]
 - Noise tranformations from [[_2019_BART]]: 
-	- #token-masking : same as [[BERT]]
+	- #token-masking : same as [[_2019_BERT]]
 	- #token-deletion : randon tokens deleted
 	- #sentence-permutation: shuffles sentences
 	- #document-rotation: a specific token is selected to start the document
