T5 and plagiarism of machine generated text

--- a/research/_2019_BART.md
+++ b/research/_2019_BART.md
@@ -3,9 +3,9 @@
 - [Zotero Select Link](zotero://select/groups/2480461/items/MQD3MHPY)
 - [Zotero URI](https://www.zotero.org/groups/2480461/items/MQD3MHPY)
 - Author: [[Mike Lewis]] [[Luke Zettlemoyer]] [[Omer Levy]]
-- Topics: [[nlp_transformers]] [[#ann_architecture]] [[nlp_lm]]
+- Topics: [[nlp_transformers]] [[ann_architecture]] [[nlp_lm]]
 - Venue: #arXiv
-- Year: #2019
+- Year: #2019 
 ---
 ### Techniques
 - Denoising [[auto-encoder]] that maps a corrupted text to the original one it was derived from
