improving abstractive  dialog summarization

--- a/research/_2021_ERNIE3.0.md
+++ b/research/_2021_ERNIE3.0.md
@@ -35,14 +35,14 @@
 - ![[2021_ERNIE3_arch.png]]
 
 ### Pre-training Tasks
-- **Word-aware pre-trained tasks**  
+- **Word-aware pre-training tasks**  
 	- **Knowledge Masked Language Modeling** (from [[_2019_ERNIE]]) introduced phrase masking and named entity masking that predict the whole masked phrases and named entities
 	- **Document language modeling:** ERNIE 3.0 opt for traditional language model as the pre-training task to abate the network complexity and heighten the effectiveness of unifie pre-training. In addition, to enable the NLG network of ERNIE 3.0 to model longer text, we introduce the Enhanced Recurrence Memory Mechanism proposed in ERNIE-Doc
 - **Structure-aware Pre-training Tasks**
 	- **Sentence Reordering**  aims to train the model to learn the relationship between sentences by reorganizing permuted segments. (from [[_2020_ERNIE2.0]])
 	- **Sentence Distance** Sentence distance task, an extension of traditional next sentence prediction (NSP) task, is widely used in various pre-trained models to enhance their ability to learn the sentence-level information
 - **Knowledge-aware Pre-training Tasks**
-	- **Universal Knowledge-Text Prediction** - extension of knowledge masked language modeling. The universal knowledge-text prediction taskrequires both unstructured texts and knowledge graphs
+	- **Universal Knowledge-Text Prediction** - extension of knowledge masked language modeling. The universal knowledge-text prediction task requires both unstructured texts and knowledge graphs
 		- Given a pair of triple from knowledge graph and the corresponding sentence from encyclopedia, we randomly mask the relation in triple or words in a sentence. To predict the relation in the triple, the model needs to detect mentions of head entity and tail entity and determine semantic relationship that holds between them in the corresponding sentence.
 		- The essence of this process is similar to the distant supervision algorithm [40] in relation extraction tasks. The distant supervision algorithm assume that if two entities participate in a relation, any sentence that contain those two entities might express that relation. 
 		- Meanwhile, to predict words in the corresponding sentence, the model not only considers the dependency information in the sentence, but also logical relationship in the triple.
